# mbw-app/src/test/resources/openapi/api-docs.snapshot.json
@@ -64,15 +64,15 @@
         }
       }
     },
-    "/api/v1/auth/login-by-phone-sms" : {
+    "/api/v1/accounts/phone-sms-auth" : {
       "post" : {
-        "tags" : [ "auth-controller" ],
-        "operationId" : "loginByPhoneSms",
+        "tags" : [ "account-auth-controller" ],
+        "operationId" : "phoneSmsAuth",
         "requestBody" : {
           "content" : {
             "application/json" : {
               "schema" : {
-                "$ref" : "#/components/schemas/LoginByPhoneSmsRequest"
+                "$ref" : "#/components/schemas/PhoneSmsAuthRequest"
               }
             }
           },
@@ -85,62 +85,6 @@
               "*/*" : {
                 "schema" : {
                   "$ref" : "#/components/schemas/LoginResponse"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/v1/auth/login-by-password" : {
-      "post" : {
-        "tags" : [ "auth-controller" ],
-        "operationId" : "loginByPassword",
-        "requestBody" : {
-          "content" : {
-            "application/json" : {
-              "schema" : {
-                "$ref" : "#/components/schemas/LoginByPasswordRequest"
-              }
-            }
-          },
-          "required" : true
-        },
-        "responses" : {
-          "200" : {
-            "description" : "OK",
-            "content" : {
-              "*/*" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/LoginResponse"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/v1/accounts/register-by-phone" : {
-      "post" : {
-        "tags" : [ "account-register-controller" ],
-        "operationId" : "registerByPhone",
-        "requestBody" : {
-          "content" : {
-            "application/json" : {
-              "schema" : {
-                "$ref" : "#/components/schemas/RegisterByPhoneRequest"
-              }
-            }
-          },
-          "required" : true
-        },
-        "responses" : {
-          "200" : {
-            "description" : "OK",
-            "content" : {
-              "*/*" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/RegisterByPhoneResponse"
                 }
               }
             }
@@ -157,10 +101,6 @@
           "phone" : {
             "type" : "string",
             "minLength" : 1
-          },
-          "purpose" : {
-            "type" : "string",
-            "enum" : [ "REGISTER", "LOGIN" ]
           }
         },
         "required" : [ "phone" ]
@@ -190,7 +130,7 @@
           }
         }
       },
-      "LoginByPhoneSmsRequest" : {
+      "PhoneSmsAuthRequest" : {
         "type" : "object",
         "properties" : {
           "phone" : {
@@ -204,52 +144,6 @@
           }
         },
         "required" : [ "code", "phone" ]
-      },
-      "LoginByPasswordRequest" : {
-        "type" : "object",
-        "properties" : {
-          "phone" : {
-            "type" : "string",
-            "minLength" : 1
-          },
-          "password" : {
-            "type" : "string",
-            "minLength" : 1
-          }
-        },
-        "required" : [ "password", "phone" ]
-      },
-      "RegisterByPhoneRequest" : {
-        "type" : "object",
-        "properties" : {
-          "phone" : {
-            "type" : "string",
-            "minLength" : 1
-          },
-          "code" : {
-            "type" : "string",
-            "minLength" : 1
-          },
-          "password" : {
-            "type" : "string"
-          }
-        },
-        "required" : [ "code", "phone" ]
-      },
-      "RegisterByPhoneResponse" : {
-        "type" : "object",
-        "properties" : {
-          "accountId" : {
-            "type" : "integer",
-            "format" : "int64"
-          },
-          "accessToken" : {
-            "type" : "string"
-          },
-          "refreshToken" : {
-            "type" : "string"
-          }
-        }
       }
     }
   }
